# ffmpeg-vmaf-gpu-benchmark

./: Dockerfile  README.md  encoding_settings.csv  ffmpeg_vmaf_benchmark.py  plot_encoding_stats.py
nvidia_quadro_p400/: benchmark_results.csv  capabilities.txt  gpt5_report.md
nvidia_quadro_p400/GPUCapsQuery/: CMakeLists.txt  GPUCapsQuery.cpp
